--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Curso 0800</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur nobis voluptate harum in aspernatur totam error, provident amet aliquid sed porro magnam nostrum accusantium neque. Numquam facere maiores a illum?</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum hic nihil, aut laudantium numquam possimus architecto voluptate itaque soluta saepe voluptatibus eaque perspiciatis voluptatum. Aut vitae repudiandae inventore tempore nemo.</p>
         </article>
     </main>
 </body>
